--- a/index.html
+++ b/index.html
@@ -1,1 +1,29 @@
-Hello
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Registration Form</title>
+</head>
+<body>
+
+<!-- Your Google Form URL for registration -->
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeSKi5hkazk_O7CKuurX5RHjM0afZZUKQJWDPFr84RRSBXT6g/viewform?embedded=true" width="100%" height="800" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+
+<script>
+  // Function to redirect after Google Form submission
+  function redirectToThankYouPage() {
+    const thankYouPageUrl = "thank-you.html"; // Replace this with your desired "Thank You" page URL
+    window.location.href = thankYouPageUrl;
+  }
+
+  // Add an event listener to the iframe
+  const iframe = document.querySelector("iframe");
+  iframe.addEventListener("load", function() {
+    // Check if the iframe source contains "formResponse", indicating a successful form submission
+    if (iframe.contentWindow.location.href.includes("formResponse")) {
+      redirectToThankYouPage(); // Redirect to the "Thank You" page
+    }
+  });
+</script>
+
+</body>
+</html>
