--- a/main.html
+++ b/main.html
@@ -176,7 +176,7 @@
             </tr>
             <tr>
               <br>
-              <a href="http://abbas-iitbombay.github.io/main.html"><button id="buttonhome" class="tab-button button" style="width:80%; height: 30px;"><b>Home</b></button></a>
+              <a href="http://jalvishwa-iitb.github.io/main.html"><button id="buttonhome" class="tab-button button" style="width:80%; height: 30px;"><b>Home</b></button></a>
               <a href="http://117.252.14.242/RMOD_DST/Default.aspx"><button type="submit" class="tab-button button" style="width:80%; height: 30px;"><b>About Project</b></button></a>
               <br>
               <br><br>
