--- a/thank-you.html
+++ b/thank-you.html
@@ -6,7 +6,7 @@
   <title>Thank You</title>
 </head>
 <body>
-  <h1>Thank you for registering!</h1>
+  <h1>Thank you for registering with JalVishwa!</h1>
   <p>You will now be redirected to our website.</p>
 
   <script>
