--- a/thank-you.html
+++ b/thank-you.html
@@ -1,7 +1,7 @@
 <!-- thank-you.html -->
 
 <!DOCTYPE html>
-<html>
+<html oncontextmenu="return false">
 <head>
   <title>Thank You</title>
 </head>
