--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html oncontextmenu="return false">
 <head>
-  <title>Registration Form</title>
+  <title>JalVishwa User Registration Form</title>
 </head>
 <body>
 
