--- a/contactinfo.html
+++ b/contactinfo.html
@@ -21,10 +21,10 @@
 		Contact <a href='mailto:jalvishwa.iitb@gmail.com'>jalvishwa.iitb@gmail.com</a> for any doubts or queries.<br><br>
 		Phone: +91 22 2576 9330<br><br>
 	
-		Users are encouraged to provide us their valuable <a href="https://docs.google.com/forms/d/e/1FAIpQLSdmuB11Ts-nZcAvPnxoB0kXbZA6Ja4pXWGp_Z_zFG7J6E14og/viewform"> Feedback</a> to improve the tool.
+		Users are encouraged to provide us their valuable <a href="https://docs.google.com/forms/d/e/1FAIpQLSdmuB11Ts-nZcAvPnxoB0kXbZA6Ja4pXWGp_Z_zFG7J6E14og/viewform" target='_blank'> Feedback</a> to improve the tool.
 	
 		<br><br>
-		Join the <a href='https://groups.google.com/g/jalvishwa_users'>JalTantra Google Group </a> for any discussion regarding JalVishwa!
+		Join the <a href='https://groups.google.com/g/jalvishwa_users' target='_blank'>JalTantra Google Group </a> for any discussion regarding JalVishwa!
 	</label>
 </body>
 </html>
