--- a/Load_page.html
+++ b/Load_page.html
@@ -405,6 +405,7 @@
     </p>
     <center>
     <img src='images/DMF_fig1.png' alt='Image' >
+    <figcaption style="font-size: 18px; color: #134C97; line-height: 1.2; padding-right:40px; padding-left:40px;">Source: Kalbar and Lokhande (2023)</figcaption>
     </center>
     <p align='justify' style='font-size: 20px; line-height:1.5; border: none;'>
     Several wastewater treatment technology alternatives are prevalent. Depending on the context decision-making, technology might be needed to be chosen from among few options. This tool has an inbuilt database for 11 treatment technologies, out of which 6 are mechanized and 5 are natural treatment technologies. Apart from these, any new technology can be added as an alternative, provided the technology details as per the technology fact-sheet template are entered by the user.
@@ -430,6 +431,7 @@
 	</p>
     <center>
     <img src='images/DMF_fig2.png' alt='Image'>
+    <figcaption style="font-size: 18px; color: #134C97; line-height: 1.2; padding-right:40px; padding-left:40px;">Source: Kalbar and Lokhande (2023)</figcaption>
     </center>
     <p align='justify' style='font-size: 20px; line-height:1.5; border: none;'>
 	The data collection for 11 technologies will be carried out through primary data collection, site visits, questionnaires and surveys. Additionally, secondary data from literature review will also be resorted to for preparing the technology factsheets. A dynamic life cycle costing module is developed for representative analysis of life cycle costs through the net present worth of the present as well as future investments.
