--- a/Load_page.html
+++ b/Load_page.html
@@ -275,7 +275,7 @@
     </p>
     <center>
     <img src='images/OWTT_fig4.png' alt='Image'>
-    <figcaption style="font-size: 18px; color: #134C97; line-height: 1.2; padding-right:40px; padding-left:40px;">Source: Kalbar et al. (2012)</figcaption>
+    <figcaption style="font-size: 18px; color: #134C97; line-height: 1.2; padding-right:40px; padding-left:40px;"><a href='PDFs/nat_tre_sys_1.pdf' target='_BLANK'>Source: Kalbar et al. (2021)</a></figcaption>
     <br>
     </center>
     <p align='justify' style='font-size: 20px; line-height:1.5; border: none;'>
