--- a/Load_page.html
+++ b/Load_page.html
@@ -85,7 +85,7 @@
 
         .rolling-text {
             white-space: nowrap;
-            animation: roll 30s linear infinite;
+            animation: roll 20s linear infinite;
         }
 
         /*.rolling-text-container:hover .rolling-text {
@@ -94,15 +94,12 @@
 
         @keyframes roll {
             from {
-                transform: translateX(100%);
+                transform: translateX(50%);
             }
             to {
-                transform: translateX(-100%);
+                transform: translateX(-140%);
             }
         }
-
-
-
 
 
     body{
@@ -168,18 +165,18 @@
             <center>  
             <img src='images/hometxt.jpg' style="width: 300px; line-height: 1;" >
             </center>
-            The treated wastewater has the potential to divert the <br>
-            unused freshwater to other sectors or to the people <br>
+            <span style="font-size: 20px;">The treated wastewater has the potential to divert the <br>
+            unused &nbspfreshwater to other &nbspsectors or to the &nbsppeople <br>
             deprived of water access! 
             <br>
             Plan your sewage treatment facilities wisely to ensure<br> 
-            optimal use of resources!
+            optimal use of resources!</span>
       </td>
     </table>
     <table>
       <tr>
-        <td style= "text-align: center; padding-top: 10px; width:882px;">
-          The <b>problems</b> (urban water management and sewage treatment) of every region and city are different <br> and hence the <b>solution</b> (choice of sewage treatment technology) should be customized to that situation. 
+        <td style= "text-align: center; padding-top: 10px; width:1000px;">
+          <span style="font-size: 20px;">The <b>problems</b> (urban water management and sewage treatment) of every region and city are different <br> and hence the <b>solution</b> (choice of sewage treatment technology) should be customized to that situation. </span>
         </td>
       </tr>
       <tr>
@@ -275,7 +272,7 @@
     </p>
     <center>
     <img src='images/OWTT_fig4.png' alt='Image'>
-    <figcaption style="font-size: 18px; color: #134C97; line-height: 1.2; padding-right:40px; padding-left:40px;"><a href='PDFs/nat_tre_sys_1.pdf' target='_BLANK'>Source: Kalbar et al. (2021)</a></figcaption>
+    <figcaption style="font-size: 18px; color: #134C97; line-height: 1.2; padding-right:40px; padding-left:40px;"><a href='PDFs/nat_tre_sys_1.pdf' target='_BLANK'> Source: Kalbar et al. (2021)</a></figcaption>
     <br>
     </center>
     <p align='justify' style='font-size: 20px; line-height:1.5; border: none;'>
@@ -413,7 +410,7 @@
     <b>Scenario selection</b><br>
     Secondly, the scenario needs to be stated, which will help in criteria identification and their weighing. Two aspects are considered in scenario selection. The context of decision-making, whether the location of STP is in an urban, peri-urban or rural region. As this might affect land availability, land price, manpower availability, wastewater characterization etc. Accordingly, the weights for different criteria might vary for effective decision-making. The second factor for defining scenarios is the fate of the treated wastewater, whether it has an enduse for irrigation or landscaping or gardening, or is used to cater non-potable water demands such as toilet flushing or for high-end industrial applications, or is disposed to sea or the river. The end use affects the water quality standards to be achieved at the STP. The scenarios will be defined as a combination of the context of decision-making and the end-use application.
     <br><br>
-    The methodology developed in this work effectively captures regional and local societal priorities in terms ofweights for criteria for each scenario and translates them into the mathematical algorithms of the MADM methodology. The criteria and indicators need to be weighed, and scenario-based decision-making can help in better weighing by prioritizing appropriate indicators on a case-specific basis.
+    The methodology developed in this work effectively captures regional and local societal priorities in terms ofweights for criteria for each scenario and translates them into the mathematical algorithms of the MADM methodology. The criteria and indicators need to be weighed, and scenario-based decision-making can help in better weighing by prioritizing appropriate indicators on a case-specific basis. 
     <br><br>
     <b>Criteria and Indicator Selection</b><br>
     Six criteria are broadly considered in the decision support tool.
