--- a/Tool_1_LCC.html
+++ b/Tool_1_LCC.html
@@ -462,18 +462,18 @@
             if (selectedOption) {
                 var optionValues = {
                     //Tech Short Name: ['Technology', land required, civilworks, ]
-                    'ASP': ['Activated Sludge Process', 1000, 400, 30, 0.18, 200, 180, 50, 10],
-                    'RBC': ['Rotating Biological Contactors', 1000, 300, 30, 0.15, 150, 70, 50, 5],
-                    'MBR': ['Membrane Bio-Reactor', 600, 250, 40, 0.25, 180, 70, 50, 15],
-                    'MBBR': ['Moving Bed Bio-Reactor', 900, 300, 35, 0.25, 200, 120, 80, 20],
-                    'SBR': ['Sequencing Batch Reactor', 800, 250, 40, 0.3, 250, 150, 90, 20],
-                    'Ext_aeration': ['Extended Aeration', 900, 400, 30, 0.28, 220, 140, 50, 5],
-                    'CW_SFV': ['Constructed Wetlands (Surface flow vertical)', 6000, 280, 5, 0.05, 20, 30, 20, 30],
-                    'CW_SSFV': ['Constructed Wetlands (Subsurface flow vertical)', 6000, 300, 5, 0.05, 23, 30, 20, 30],
-                    'CW_DPW': ['Constructed Wetlands (Deep bed wetlands)', 4000, 250, 10, 0.05, 22, 30, 20, 30],
-                    'WS_ponds': ['Waste Stabilization ponds', 8000, 150, 5, 0.05, 15, 40, 10, 40],
-                    'D_ponds': ['Duckweed ponds', 7000, 150, 5, 0.05, 20, 40, 10, 50],
-                    'others' : ['', 0, 0, 0, 0, 0, 0, 0, 0]
+                    'ASP': ['Activated Sludge Process', '', '', '', '', '', '', '', ''],
+                    'RBC': ['Rotating Biological Contactors', '', '', '', '', '', '', '', ''],
+                    'MBR': ['Membrane Bio-Reactor', '', '', '', '', '', '', '', ''],
+                    'MBBR': ['Moving Bed Bio-Reactor', '', '', '', '', '', '', '', ''],
+                    'SBR': ['Sequencing Batch Reactor', '', '', '', '', '', '', '', ''],
+                    'Ext_aeration': ['Extended Aeration', '', '', '', '', '', '', '', ''],
+                    'CW_SFV': ['Constructed Wetlands (Surface flow vertical)', '', '', '', '', '', '', '', ''],
+                    'CW_SSFV': ['Constructed Wetlands (Subsurface flow vertical)', '', '', '', '', '', '', '', ''],
+                    'CW_DPW': ['Constructed Wetlands (Deep bed wetlands)', '', '', '', '', '', '', '', ''],
+                    'WS_ponds': ['Waste Stabilization ponds', '', '', '', '', '', '', '', ''],
+                    'D_ponds': ['Duckweed ponds', '', '', '', '', '', '', '', ''],
+                    'others' : ['', '', '', '', '', '', '', '', '']
                 };
 
                 var values = optionValues[selectedOption];
