--- a/Tool_2_DST.html
+++ b/Tool_2_DST.html
@@ -583,45 +583,45 @@
 		        } else if (indicator === "LCC") {
 		            values = ['', '', '', '', '', '', '', '', '', '', ''];
 		        } else if (indicator === "GWP") {
-		            values = [18.2, 10, 20, 12, 31.97, 25, -3.86, -3, -2, 3, 4];
+		            values = ['', '', '', '', '', '', '', '', '', '', ''];
 		        } else if (indicator === "EuP") {
-		            values = [3.76, 3, 4, 4, 1.38, 3, 3.4, 3, 3, 2, 2];
+		            values = ['', '', '', '', '', '', '', '', '', '', ''];
 		        } else if (indicator === "EcoSer") {
-		            values = [5, 5, 3, 3, 3, 4, 10, 10, 9, 8, 9];
+		            values = ['', '', '', '', '', '', '', '', '', '', ''];
 		        } else if (indicator === "WasRec") {
-		            values = [5, 4, 5, 5, 6, 5, 8, 8, 7, 9, 7];
+		            values = ['', '', '', '', '', '', '', '', '', '', ''];
 		        } else if (indicator === "EnePot") {
-		            values = [2, 2, 2, 2, 2, 2, 6, 6, 5, 8, 7];
+		            values = ['', '', '', '', '', '', '', '', '', '', ''];
 		        } else if (indicator === "ProPot") {
-		            values = [2, 1, 1, 2, 2, 1, 9, 9, 8, 7, 10];
+		            values = ['', '', '', '', '', '', '', '', '', '', ''];
 		        } else if (indicator === "SocUnskill") {
-		            values = [40, 50, 20, 40, 20, 30, 90, 90, 90, 90, 90];
+		            values = ['', '', '', '', '', '', '', '', '', '', ''];
 		        } else if (indicator === "SocAccept") {
-		            values = [7, 7, 5, 6, 4, 4, 8, 8, 7, 4, 5];
+		            values = ['', '', '', '', '', '', '', '', '', '', ''];
 		        } else if (indicator === "SocPart") {
-		            values = [4, 4, 4, 4, 4, 4, 6, 6, 6, 6, 6];
+		            values = ['', '', '', '', '', '', '', '', '', '', ''];
 		        } else if (indicator === "R_reli") {
-		            values = [9, 9, 7, 7, 5, 4, 8, 8, 8, 7, 7];
+		            values = ['', '', '', '', '', '', '', '', '', '', ''];
 		        } else if (indicator === "R_dura") {
-		            values = [9, 9, 7, 7, 5, 4, 8, 8, 8, 6, 7];
+		            values = ['', '', '', '', '', '', '', '', '', '', ''];
 		        } else if (indicator === "R_flex") {
-		            values = [9, 6, 7, 6, 5, 4, 8, 8, 8, 7, 5];
+		            values = ['', '', '', '', '', '', '', '', '', '', ''];
 		        } else if (indicator === "R_repl") {
-		            values = [9, 9, 7, 7, 5, 4, 8, 8, 8, 7, 7];
+		            values = ['', '', '', '', '', '', '', '', '', '', ''];
 		        } else if (indicator === "BOD") {
-		            values = [70, 60, 75, 60, 80, 60, 60, 65, 60, 60, 60];
+		            values = ['', '', '', '', '', '', '', '', '', '', ''];
 		        } else if (indicator === "COD") {
-		            values = [75, 60, 75, 70, 80, 60, 55, 65, 65, 60, 60];
+		            values = ['', '', '', '', '', '', '', '', '', '', ''];
 		        } else if (indicator === "Nitro") {
-		            values = [40, 40, 40, 50, 60, 40, 80, 85, 85, 70, 90];
+		            values = ['', '', '', '', '', '', '', '', '', '', ''];
 		        } else if (indicator === "Phosph") {
-		            values = [40, 40, 40, 50, 60, 40, 80, 85, 85, 70, 90];
+		            values = ['', '', '', '', '', '', '', '', '', '', ''];
 		        } else if (indicator === "Pathogens") {
-		            values = [30, 30, 30, 30, 30, 30, 80, 80, 80, 90, 85];
+		            values = ['', '', '', '', '', '', '', '', '', '', ''];
 		        } else if (indicator === "Em_cont") {
-		            values = [30, 30, 30, 30, 30, 30, 50, 50, 50, 40, 50];
+		            values = ['', '', '', '', '', '', '', '', '', '', ''];
 		        } else if (indicator === "Lan_suit") {
-		            values = [1, 1, 1, 1, 1, 1, 0.7, 0.7, 0.7, 0.6, 0.6];
+		            values = ['', '', '', '', '', '', '', '', '', '', ''];
 		        } 
 
 		        matrixValues.ASP.push(values[0]);
