--- a/Load_page.html
+++ b/Load_page.html
@@ -402,7 +402,7 @@
     </p>
     <center>
     <img src='images/DMF_fig1.png' alt='Image' >
-    <figcaption style="font-size: 18px; color: #134C97; line-height: 1.2; padding-right:40px; padding-left:40px;">Source: Kalbar and Lokhande (2023)</figcaption>
+    <figcaption style="font-size: 18px; color: #134C97; line-height: 1.2; padding-right:40px; padding-left:40px;">Source: Kalbar and Lokhande </figcaption>
     </center>
     <p align='justify' style='font-size: 20px; line-height:1.5; border: none;'>
     Several wastewater treatment technology alternatives are prevalent. Depending on the context decision-making, technology might be needed to be chosen from among few options. This tool has an inbuilt database for 11 treatment technologies, out of which 6 are mechanized and 5 are natural treatment technologies. Apart from these, any new technology can be added as an alternative, provided the technology details as per the technology fact-sheet template are entered by the user.
@@ -424,11 +424,11 @@
 		6.	Resilience<br>
 	</p>
 	<p align='justify' style='font-size: 20px; line-height:1.5; border: none;'>
-	From the sustainability perspective, economic, social and environmental criteria form the pillars of sustainability. Additionally, technical criteria are also significant for ensuring the sustenance of plant by the operators. Further, amidst freshwater scarcity and resource constraints, circular economy is gaining significance in the wastewater sector. Hence, the circularity potential of a particular treatment technology is also significant in today’s time. Lastly, in the wake of climate change and occurrence of extreme events, it is necessary for the STPs to be resilient enough to resume service without causing much damage through service disruption to the public. Figure shows the various indicators that can be used to quantify each of the criteria considered for technology assessment. The details of the indicators and their significance are found HERE.
+	From the sustainability perspective, economic, social and environmental criteria form the pillars of sustainability. Additionally, technical criteria are also significant for ensuring the sustenance of plant by the operators. Further, amidst freshwater scarcity and resource constraints, circular economy is gaining significance in the wastewater sector. Hence, the circularity potential of a particular treatment technology is also significant in today’s time. Lastly, in the wake of climate change and occurrence of extreme events, it is necessary for the STPs to be resilient enough to resume service without causing much damage through service disruption to the public. Figure shows the various indicators that can be used to quantify each of the criteria considered for technology assessment.
 	</p>
     <center>
     <img src='images/DMF_fig2.png' alt='Image'>
-    <figcaption style="font-size: 18px; color: #134C97; line-height: 1.2; padding-right:40px; padding-left:40px;">Source: Kalbar and Lokhande (2023)</figcaption>
+    <figcaption style="font-size: 18px; color: #134C97; line-height: 1.2; padding-right:40px; padding-left:40px;">Source: Kalbar and Lokhande </figcaption>
     </center>
     <p align='justify' style='font-size: 20px; line-height:1.5; border: none;'>
 	The data collection for 11 technologies will be carried out through primary data collection, site visits, questionnaires and surveys. Additionally, secondary data from literature review will also be resorted to for preparing the technology factsheets. A dynamic life cycle costing module is developed for representative analysis of life cycle costs through the net present worth of the present as well as future investments.
