--- a/Tool_1_LCC.html
+++ b/Tool_1_LCC.html
@@ -1186,7 +1186,7 @@
             var tableElement = document.createElement('table');
             var value1Row = document.createElement('tr');
             var value1LabelCell = document.createElement('td');
-            value1LabelCell.innerHTML = '<br>';
+            value1LabelCell.innerHTML = '<br><br>';
             value1LabelCell.style.width='300px';
             value1LabelCell.style.fontWeight = 'bold';
             value1Row.appendChild(value1LabelCell);
@@ -2004,7 +2004,7 @@
             var resultTextElement = document.createElement('p');
             resultTextElement.textContent = 'Summary';
             resultTextElement.style.fontWeight = 'bold';
-            resultTextElement.style.color = 'grey';
+            resultTextElement.style.color = 'blue';
             resultTextElement.style.marginBottom = '0';
             container.appendChild(resultTextElement);
 
