--- a/Tool_1_LCC.html
+++ b/Tool_1_LCC.html
@@ -258,9 +258,9 @@
                         <option value="Ext_aeration">Extended Aeration</option>
 
                         <option value="" disabled style="background-color:brown; color:white; ">Natural Treatments</option>
-                        <option value="CW_SFV">Constructed Wetlands (Surface flow vertical)</option>
-                        <option value="CW_SSFV">Constructed Wetlands (Subsurface flow horizontal)</option>
-                        <option value="CW_DPW">Constructed Wetlands (Deep bed wetlands)</option>
+                        <option value="CW_SFV">Constructed Wetlands</option>
+                        <option value="CW_SSFV" disabled hidden>Constructed Wetlands (Subsurface flow horizontal)</option>
+                        <option value="CW_DPW" disabled hidden>Constructed Wetlands (Deep bed wetlands)</option>
                         <option value="WS_ponds">Waste Stabilization ponds</option>
                         <option value="D_ponds">Duckweed ponds</option>
                         <option value="others" style="background-color:brown; color:white; ">Other Treatment Technology</option>
@@ -468,7 +468,7 @@
                     'MBBR': ['Moving Bed Bio-Reactor', '', '', '', '', '', '', '', ''],
                     'SBR': ['Sequencing Batch Reactor', '', '', '', '', '', '', '', ''],
                     'Ext_aeration': ['Extended Aeration', '', '', '', '', '', '', '', ''],
-                    'CW_SFV': ['Constructed Wetlands (Surface flow vertical)', '', '', '', '', '', '', '', ''],
+                    'CW_SFV': ['Constructed Wetlands', '', '', '', '', '', '', '', ''],
                     'CW_SSFV': ['Constructed Wetlands (Subsurface flow vertical)', '', '', '', '', '', '', '', ''],
                     'CW_DPW': ['Constructed Wetlands (Deep bed wetlands)', '', '', '', '', '', '', '', ''],
                     'WS_ponds': ['Waste Stabilization ponds', '', '', '', '', '', '', '', ''],
