--- a/Tool_2_DST.html
+++ b/Tool_2_DST.html
@@ -314,9 +314,9 @@
 				<td style="width: 445px;">
 				    <div>
 				    	<h5>Natural Treatment</h5>
-				        <input type="checkbox" name="tech[]" value="CW_SFV">Constructed Wetlands (Surface flow vertical)<br/>
-				        <input type="checkbox" name="tech[]" value="CW_SSFV">Constructed Wetlands (Subsurface flow vertical)<br/>
-				        <input type="checkbox" name="tech[]" value="CW_DPW">Constructed Wetlands (Deep bed wetlands)<br/>
+				        <input type="checkbox" name="tech[]" value="CW_SFV">Constructed Wetlands <br/>
+				        <!--input type="checkbox" name="tech[]" value="CW_SSFV">Constructed Wetlands (Subsurface flow vertical)<br/>
+				        <input type="checkbox" name="tech[]" value="CW_DPW">Constructed Wetlands (Deep bed wetlands)<br/-->
 				        <input type="checkbox" name="tech[]" value="WS_ponds">Waste Stabilization ponds<br/>
 				        <input type="checkbox" name="tech[]" value="D_ponds">Duckweed ponds<br/>
 				        <input type="hidden" name="num_technologies" value="0" />
@@ -550,7 +550,7 @@
 				MBBR: ['Moving Bed Bio-Reactor'],
 				SBR: ['Sequencing Batch Reactor'],
 				Ext_aeration: ['Extended Aeration'],
-				CW_SFV: ['Constructed Wetlands (Surface flow vertical)'],
+				CW_SFV: ['Constructed Wetlands'],
 				CW_SSFV: ['Constructed Wetlands (Subsurface flow vertical)'],
 				CW_DPW: ['Constructed Wetlands (Deep bed wetlands)'],
 				WS_ponds: ['Waste Stabilization ponds'],
