--- a/Load_page.html
+++ b/Load_page.html
@@ -157,34 +157,19 @@
 
   <div id="tab1" class="tab-content">
     <br>
-    <table>
-      <td style= "padding-left: 100px;">
+    <center>
         <img src='images/Jalvishwa_4web.jpg' style="width: 300px; line-height: 1;" >
-      </td>
-      <td style= "padding-left: 100px;">
-            <center>  
-            <img src='images/hometxt.jpg' style="width: 300px; line-height: 1;" >
-            </center>
-            <span style="font-size: 20px;">The treated wastewater has the potential to divert the <br>
-            unused &nbspfreshwater to other &nbspsectors or to the &nbsppeople <br>
-            deprived of water access! 
-            <br>
-            Plan your sewage treatment facilities wisely to ensure<br> 
-            optimal use of resources!</span>
-      </td>
-    </table>
-    <table>
-      <tr>
-        <td style= "text-align: center; padding-top: 10px; width:1000px;">
-          <span style="font-size: 20px;">The <b>problems</b> (urban water management and sewage treatment) of every region and city are different <br> and hence the <b>solution</b> (choice of sewage treatment technology) should be customized to that situation. </span>
-        </td>
-      </tr>
-      <tr>
-        <td style= "text-align: center; padding-top: 10px;">
+        <img src='images/hometxt.jpg' style="width: 300px; line-height: 1;" >
+      </center>
+            <p style="font-size: 20px; text-align: justify;">The treated wastewater has the potential to divert the unused freshwater to other &nbspsectors or to the &nbsppeople deprived of water access! Plan your sewage treatment facilities wisely to ensure optimal use of resources! 
+            <br><br> 
+            The <b>problems</b> (urban water management and sewage treatment) of every region and city are different and hence the <b>solution</b> (choice of sewage treatment technology) should be customized to that situation.
+          </p>
+          <center>
+          <br>
           <span style="font-size: 40px; font-weight: bold; ">Welcome to <span style="color: #B80F0A;"><i>JalVishwa!</i></span></span>
-        </td>
-      </tr>
-    </table>
+        </center>  
+        <br><br>
           <div class="rolling-text-container">
             <div class="rolling-text" style="padding-top: 5px; font-weight: bold; font-size: 28px;">
               A <span style="color: #7030a0">decision support tool</span> to select <span style="color: #7030a0">an appropriate treatment technology </span> for ensuring <span style="color: #7030a0"> sustainable and resilient </span> sewage treatment in your city! 
@@ -300,12 +285,12 @@
 
       <td style='border: 1px solid purple; padding: 10px 40px'><b>Natural Treatment</b></td>
       <td style='border: 1px solid purple; padding: 10px 40px'>
-           <a href='PDFs/CW_SFV.pdf' target='_BLANK'>Constructed Wetlands (Surface flow vertical)</a>
+           <a href='PDFs/CWet.pdf' target='_BLANK'>Constructed Wetlands</a>
            <br>
-           <a href='PDFs/CW_SSFV.pdf' target='_BLANK'>Constructed Wetlands (Subsurface flow vertical)</a>
+           <!--a href='PDFs/CW_SSFV.pdf' target='_BLANK'>Constructed Wetlands (Subsurface flow vertical)</a>
            <br>
            <a href='PDFs/CW_DPW.pdf' target='_BLANK'>Constructed Wetlands (Deep bed wetlands)</a>
-           <br>
+           <br-->
            <a href='PDFs/WS_ponds.pdf' target='_BLANK'>Waste Stabilization ponds</a>
            <br>
            <a href='PDFs/D_ponds.pdf' target='_BLANK'>Duckweed ponds</a>
