--- a/Load_page.html
+++ b/Load_page.html
@@ -161,7 +161,7 @@
         <img src='images/Jalvishwa_4web.jpg' style="width: 300px; line-height: 1;" >
         <img src='images/hometxt.jpg' style="width: 300px; line-height: 1;" >
       </center>
-            <p style="font-size: 20px; text-align: justify;">The treated wastewater has the potential to divert the unused freshwater to other &nbspsectors or to the &nbsppeople deprived of water access! Plan your sewage treatment facilities wisely to ensure optimal use of resources! 
+            <p style="font-size: 20px; text-align: justify; margin-left: 200px; margin-right: 200px;">The treated wastewater has the potential to divert the unused freshwater to other &nbspsectors or to the &nbsppeople deprived of water access! Plan your sewage treatment facilities wisely to ensure optimal use of resources! 
             <br><br> 
             The <b>problems</b> (urban water management and sewage treatment) of every region and city are different and hence the <b>solution</b> (choice of sewage treatment technology) should be customized to that situation.
           </p>
