--- a/Tool_1_LCC.html
+++ b/Tool_1_LCC.html
@@ -219,13 +219,13 @@
                     <label><b>Life of the Project:<br></b>( years )</label>
                 </td>
                 <td style='height: 40px; background-color: lightblue;'>
-                    <input type='number' class='inp_box' name='lop' id='lop' min='1' value='30'>
+                    <input type='number' class='inp_box' name='lop' id='lop' min='1' value=''>
                 </td>
                 <td class='td_text' style="width: 200px; background-color: lightblue; ">
                     <label><b>Rate of interest:<br></b>( Percentage )</label>
                 </td>
                 <td style='height: 40px; background-color: lightblue; padding-right: 50px;'>
-                    <input type='number' class='inp_box' name='form1_interest' id='form1_interest' step='0.01' min='0' value='9.2'>
+                    <input type='number' class='inp_box' name='form1_interest' id='form1_interest' step='0.01' min='0' value=''>
                 </td>
             </tr>
             <tr style='border-bottom: 1px solid black;'>
@@ -233,13 +233,13 @@
                     <label><b>Land Price:<br></b>( INR/sq.m)</label>
                 </td>
                 <td style='height: 40px; background-color: lightblue;'>
-                    <input type='number' class='inp_box' name='form1_land_price' id='form1_land_price' step='0.01' min='0' value='0'>
+                    <input type='number' class='inp_box' name='form1_land_price' id='form1_land_price' step='0.01' min='0' value=''>
                 </td>
                 <td class='td_text' style="width: 200px; background-color: lightblue;">
                     <label><b>Energy Price:<br></b>( INR/kWh )</label>
                 </td>
                 <td style='height: 40px; background-color: lightblue;'>
-                <input type='number' class='inp_box' name='form1_energy_price' id='form1_energy_price' step='0.01' min='0' value='0'>
+                <input type='number' class='inp_box' name='form1_energy_price' id='form1_energy_price' step='0.01' min='0' value=''>
                 </td>
             </tr>
             <tr style='border-bottom: 1px solid black; height:60px; background-color: lightyellow;'>
