--- a/Tool_2_DST.html
+++ b/Tool_2_DST.html
@@ -157,7 +157,7 @@
 				    	<h5>1. Economic Indicators</h5>
 				        <input type="checkbox" name="indicate[]" value="Capex">Capital Cost<br/>
 				        <input type="checkbox" name="indicate[]" value="Opex">Operational Cost<br/>
-				        <input type="checkbox" name="indicate[]" value="Revenue">Revenue Cost<br/>
+				        <input type="checkbox" name="indicate[]" value="Revenue">Revenue Generation<br/>
 				        <input type="checkbox" name="indicate[]" value="LCC">Life Cycle Cost<br/>
 				        <input type="hidden" name="num_textboxes" value="0" />
 				    </div>
@@ -520,7 +520,7 @@
 			var list_indicators = {
 				Capex: ['Capital Cost'],
 				Opex: ['Operational Cost'],
-				Revenue: ['Revenue Cost'],
+				Revenue: ['Revenue Generation'],
 				LCC: ['Life Cycle Cost'],
 				GWP: ['Global Warming Potential'],
 				EuP: ['Eutrophication Potential'],
