--- a/Tool_1_LCC.html
+++ b/Tool_1_LCC.html
@@ -325,62 +325,62 @@
                                 <label>Rate (INR) </label>
                             </td>
                             <td class='td_text' style = 'text-align: center; font-weight: bold; '>
-                                <label>Replace after ?? years</label>
+                                <label>Lifespan (Yrs) </label>
                             </td>
                         </tr>
                         <tr>
                             <td>
-                                <input class='inp_box' type='text' id='part1' name='part1' value='Part 1'>
+                                <input class='inp_box' type='text' id='part1' name='part1' value=''>
                             </td>
                             <td>
-                                <input class='inp_box' type='number' id='rate1' name='rate1' step='0.01' min = '0' value='0'>
+                                <input class='inp_box' type='number' id='rate1' name='rate1' step='0.01' min = '0' value=''>
                             </td>
                             <td>
-                                <input class='inp_box' type='number' id='rep_yr1' name='rep_yr1' step='0.5'  min='0.5' value ='0.5'>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <input class='inp_box' type='text' id='part2'  name='part2' value='Part 2'>
-                            </td>
-                            <td>
-                                <input class='inp_box' type='number' id='rate2' name='rate2' step='0.01'  min = '0' value='0'>
-                            </td>
-                            <td>
-                                <input class='inp_box' type='number' id='rep_yr2' name='rep_yr2' step='0.5' min='0.5' value ='0.5'>
+                                <input class='inp_box' type='number' id='rep_yr1' name='rep_yr1' step='0.5'  min='0.5' value =''>
                             </td>
                         </tr>
                         <tr>
                             <td>
-                                <input class='inp_box' type='text' id='part3' name='part3' value='Part 3' >
+                                <input class='inp_box' type='text' id='part2'  name='part2' value=''>
                             </td>
                             <td>
-                                <input class='inp_box' type='number' id='rate3' name='rate3' step='0.01'  min = '0' value='0'>
+                                <input class='inp_box' type='number' id='rate2' name='rate2' step='0.01'  min = '0' value=''>
                             </td>
                             <td>
-                                <input class='inp_box' type='number' id='rep_yr3' name='rep_yr3' step='0.5' min='0.5' value ='0.5'>
+                                <input class='inp_box' type='number' id='rep_yr2' name='rep_yr2' step='0.5' min='0.5' value =''>
                             </td>
                         </tr>
                         <tr>
                             <td>
-                                <input class='inp_box' type='text' id='part4' name='part4' value='Part 4' >
+                                <input class='inp_box' type='text' id='part3' name='part3' value='' >
                             </td>
                             <td>
-                                <input class='inp_box' type='number' id='rate4' name='rate4' step='0.01' min = '0' value='0'>
+                                <input class='inp_box' type='number' id='rate3' name='rate3' step='0.01'  min = '0' value=''>
                             </td>
                             <td>
-                                <input class='inp_box' type='number' id='rep_yr4' name='rep_yr4' step='0.5' min='0.5' value ='0.5'>
+                                <input class='inp_box' type='number' id='rep_yr3' name='rep_yr3' step='0.5' min='0.5' value =''>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <input class='inp_box' type='text' id='part4' name='part4' value='' >
+                            </td>
+                            <td>
+                                <input class='inp_box' type='number' id='rate4' name='rate4' step='0.01' min = '0' value=''>
+                            </td>
+                            <td>
+                                <input class='inp_box' type='number' id='rep_yr4' name='rep_yr4' step='0.5' min='0.5' value =''>
                             </td>
                         </tr>
                         <tr >
                             <td style="padding-bottom: 10px;">
-                                <input class='inp_box' type='text' id='part5' name='part5' value='Part 5'>
+                                <input class='inp_box' type='text' id='part5' name='part5' value=''>
                             </td>
                             <td style="padding-bottom: 10px;">
-                                <input class='inp_box' type='number' id='rate5' name='rate5' step='0.01'  min = '0' value='0'>
+                                <input class='inp_box' type='number' id='rate5' name='rate5' step='0.01'  min = '0' value=''>
                             </td>
                             <td style="padding-bottom: 10px;">
-                                <input class='inp_box' type='number' id='rep_yr5' name='rep_yr5' step='0.5' min='0.5' value ='0.5'>
+                                <input class='inp_box' type='number' id='rep_yr5' name='rep_yr5' step='0.5' min='0.5' value =''>
                             </td>
                         </tr>
                     </table>
@@ -490,6 +490,22 @@
                     
                 }
             }
+            part1.value='';
+            part2.value='';
+            part3.value='';
+            part4.value='';
+            part5.value='';
+            rate1.value='';
+            rate2.value='';
+            rate3.value='';
+            rate4.value='';
+            rate5.value='';
+            rep_yr1.value='';
+            rep_yr2.value='';
+            rep_yr3.value='';
+            rep_yr4.value='';
+            rep_yr5.value='';
+
             // Show the "Generate 2PDF" buttons
             var pdfButton = document.getElementById("LccButton");// querySelector('input[value="Generate Life Cycle Costing Report"]');
             pdfButton.style.display = 'inline-block';
@@ -900,7 +916,7 @@
                 value1Row.appendChild(value2Cell);
 
                 var value3Cell = document.createElement('td');
-                value3Cell.textContent = 'Replace after';
+                value3Cell.textContent = 'Lifespan (Yrs)';//'Replace after';
                 value3Cell.style.borderBottom = '1px solid black';
                 value1Row.appendChild(value3Cell);
 
@@ -921,7 +937,7 @@
                 value1Row.appendChild(value2Cell);
 
                 var value3Cell = document.createElement('td');
-                value3Cell.textContent = rep_yr1+ ' yrs';
+                value3Cell.textContent = rep_yr1;
                 value1Row.appendChild(value3Cell);
 
                 tableElement.appendChild(value1Row);
@@ -941,7 +957,7 @@
                 value1Row.appendChild(value2Cell);
 
                 var value3Cell = document.createElement('td');
-                value3Cell.textContent = rep_yr2+ ' yrs';
+                value3Cell.textContent = rep_yr2;
                 value1Row.appendChild(value3Cell);
 
                 tableElement.appendChild(value1Row);
@@ -961,7 +977,7 @@
                 value1Row.appendChild(value2Cell);
 
                 var value3Cell = document.createElement('td');
-                value3Cell.textContent = rep_yr3 + ' yrs';
+                value3Cell.textContent = rep_yr3;
                 value1Row.appendChild(value3Cell);
 
                 tableElement.appendChild(value1Row);
@@ -981,7 +997,7 @@
                 value1Row.appendChild(value2Cell);
 
                 var value3Cell = document.createElement('td');
-                value3Cell.textContent = rep_yr4+ ' yrs';
+                value3Cell.textContent = rep_yr4;
                 value1Row.appendChild(value3Cell);
 
                 tableElement.appendChild(value1Row);
@@ -1001,7 +1017,7 @@
                 value1Row.appendChild(value2Cell);
 
                 var value3Cell = document.createElement('td');
-                value3Cell.textContent = rep_yr5+ ' yrs';
+                value3Cell.textContent = rep_yr5;
                 value1Row.appendChild(value3Cell);
 
                 tableElement.appendChild(value1Row);
@@ -1180,14 +1196,14 @@
             //-------------------------------------------------------------------------------------------------------------------------------
 
             var pageBreakElement = document.createElement('div');
-            pageBreakElement.style.pageBreakAfter = 'none';
+            pageBreakElement.style.pageBreakAfter = 'always';
             container.appendChild(pageBreakElement);
 
             var tableElement = document.createElement('table');
             var value1Row = document.createElement('tr');
             var value1LabelCell = document.createElement('td');
-            value1LabelCell.innerHTML = '<br><br>';
-            value1LabelCell.style.width='300px';
+            value1LabelCell.innerHTML = '';
+            value1LabelCell.style.width='120px';
             value1LabelCell.style.fontWeight = 'bold';
             value1Row.appendChild(value1LabelCell);
             tableElement.appendChild(value1Row); 
