--- a/Tool_1_LCC.html
+++ b/Tool_1_LCC.html
@@ -219,7 +219,7 @@
                     <label><b>Life of the Project:<br></b>( years )</label>
                 </td>
                 <td style='height: 40px; background-color: lightblue;'>
-                    <input type='number' class='inp_box' name='lop' id='lop' min='1' value=''>
+                    <input type='number' class='inp_box' name='lop' id='lop' min='1' value='30'>
                 </td>
                 <td class='td_text' style="width: 200px; background-color: lightblue; ">
                     <label><b>Rate of interest:<br></b>( Percentage )</label>
