--- a/Tool_1_LCC.html
+++ b/Tool_1_LCC.html
@@ -490,7 +490,7 @@
                     
                 }
             }
-            part1.value='';
+            /*part1.value='';
             part2.value='';
             part3.value='';
             part4.value='';
@@ -504,7 +504,7 @@
             rep_yr2.value='';
             rep_yr3.value='';
             rep_yr4.value='';
-            rep_yr5.value='';
+            rep_yr5.value='';*/
 
             // Show the "Generate 2PDF" buttons
             var pdfButton = document.getElementById("LccButton");// querySelector('input[value="Generate Life Cycle Costing Report"]');
