--- a/Tool_1_LCC.html
+++ b/Tool_1_LCC.html
@@ -225,7 +225,7 @@
                     <label><b>Rate of interest:<br></b>( Percentage )</label>
                 </td>
                 <td style='height: 40px; background-color: lightblue; padding-right: 50px;'>
-                    <input type='number' class='inp_box' name='form1_interest' id='form1_interest' step='0.01' min='0' value=''>
+                    <input type='number' class='inp_box' name='form1_interest' id='form1_interest' step='0.01' min='0' value='9.2'>
                 </td>
             </tr>
             <tr style='border-bottom: 1px solid black;'>
@@ -233,13 +233,13 @@
                     <label><b>Land Price:<br></b>( INR/sq.m)</label>
                 </td>
                 <td style='height: 40px; background-color: lightblue;'>
-                    <input type='number' class='inp_box' name='form1_land_price' id='form1_land_price' step='0.01' min='0' value=''>
+                    <input type='number' class='inp_box' name='form1_land_price' id='form1_land_price' step='0.01' min='0' value='1200'>
                 </td>
                 <td class='td_text' style="width: 200px; background-color: lightblue;">
                     <label><b>Energy Price:<br></b>( INR/kWh )</label>
                 </td>
                 <td style='height: 40px; background-color: lightblue;'>
-                <input type='number' class='inp_box' name='form1_energy_price' id='form1_energy_price' step='0.01' min='0' value=''>
+                <input type='number' class='inp_box' name='form1_energy_price' id='form1_energy_price' step='0.01' min='0' value='6.5'>
                 </td>
             </tr>
             <tr style='border-bottom: 1px solid black; height:60px; background-color: lightyellow;'>
@@ -490,21 +490,21 @@
                     
                 }
             }
-            /*part1.value='';
-            part2.value='';
-            part3.value='';
-            part4.value='';
-            part5.value='';
-            rate1.value='';
-            rate2.value='';
-            rate3.value='';
-            rate4.value='';
-            rate5.value='';
-            rep_yr1.value='';
-            rep_yr2.value='';
-            rep_yr3.value='';
-            rep_yr4.value='';
-            rep_yr5.value='';*/
+            //part1.value='';
+            //part2.value='';
+            //part3.value='';
+            //part4.value='';
+            //part5.value='';
+            //rate1.value='';
+            //rate2.value='';
+            //rate3.value='';
+           // rate4.value='';
+            //rate5.value='';
+           // rep_yr1.value='';
+           // rep_yr2.value='';
+           // rep_yr3.value='';
+           // rep_yr4.value='';
+           // rep_yr5.value='';
 
             // Show the "Generate 2PDF" buttons
             var pdfButton = document.getElementById("LccButton");// querySelector('input[value="Generate Life Cycle Costing Report"]');
