--- a/Tool_1_LCC.html
+++ b/Tool_1_LCC.html
@@ -339,57 +339,57 @@
                         </tr>
                         <tr>
                             <td>
-                                <input class='inp_box' type='text' id='part1' name='part1' value='Part 1'>
+                                <input class='inp_box' type='text' id='part1' name='part1' value=''>
                             </td>
                             <td>
-                                <input class='inp_box' type='number' id='rate1' name='rate1' step='0.01' min = '0' value='0'>
+                                <input class='inp_box' type='number' id='rate1' name='rate1' step='0.01' min = '0' value=''>
                             </td>
                             <td>
-                                <input class='inp_box' type='number' id='rep_yr1' name='rep_yr1' step='0.5' value =''>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <input class='inp_box' type='text' id='part2'  name='part2' value='Part 2'>
-                            </td>
-                            <td>
-                                <input class='inp_box' type='number' id='rate2' name='rate2' step='0.01'  min = '0' value='0'>
-                            </td>
-                            <td>
-                                <input class='inp_box' type='number' id='rep_yr2' name='rep_yr2' step='0.5' value =''>
+                                <input class='inp_box' type='number' id='rep_yr1' name='rep_yr1' step='0.5' value ='0.5'>
                             </td>
                         </tr>
                         <tr>
                             <td>
-                                <input class='inp_box' type='text' id='part3' name='part3' value='Part 3' >
+                                <input class='inp_box' type='text' id='part2'  name='part2' value=''>
                             </td>
                             <td>
-                                <input class='inp_box' type='number' id='rate3' name='rate3' step='0.01'  min = '0' value='0'>
+                                <input class='inp_box' type='number' id='rate2' name='rate2' step='0.01'  min = '0' value=''>
                             </td>
                             <td>
-                                <input class='inp_box' type='number' id='rep_yr3' name='rep_yr3' step='0.5' value =''>
+                                <input class='inp_box' type='number' id='rep_yr2' name='rep_yr2' step='0.5' value ='0.5'>
                             </td>
                         </tr>
                         <tr>
                             <td>
-                                <input class='inp_box' type='text' id='part4' name='part4' value='Part 4' >
+                                <input class='inp_box' type='text' id='part3' name='part3' value='' >
                             </td>
                             <td>
-                                <input class='inp_box' type='number' id='rate4' name='rate4' step='0.01' min = '0' value='0'>
+                                <input class='inp_box' type='number' id='rate3' name='rate3' step='0.01'  min = '0' value=''>
                             </td>
                             <td>
-                                <input class='inp_box' type='number' id='rep_yr4' name='rep_yr4' step='0.5' value =''>
+                                <input class='inp_box' type='number' id='rep_yr3' name='rep_yr3' step='0.5' value ='0.5'>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <input class='inp_box' type='text' id='part4' name='part4' value='' >
+                            </td>
+                            <td>
+                                <input class='inp_box' type='number' id='rate4' name='rate4' step='0.01' min = '0' value=''>
+                            </td>
+                            <td>
+                                <input class='inp_box' type='number' id='rep_yr4' name='rep_yr4' step='0.5' value ='0.5'>
                             </td>
                         </tr>
                         <tr >
                             <td style="padding-bottom: 10px;">
-                                <input class='inp_box' type='text' id='part5' name='part5' value='Part 5'>
+                                <input class='inp_box' type='text' id='part5' name='part5' value=''>
                             </td>
                             <td style="padding-bottom: 10px;">
-                                <input class='inp_box' type='number' id='rate5' name='rate5' step='0.01'  min = '0' value='0'>
+                                <input class='inp_box' type='number' id='rate5' name='rate5' step='0.01'  min = '0' value=''>
                             </td>
                             <td style="padding-bottom: 10px;">
-                                <input class='inp_box' type='number' id='rep_yr5' name='rep_yr5' step='0.5' value =''>
+                                <input class='inp_box' type='number' id='rep_yr5' name='rep_yr5' step='0.5' value ='0.5'>
                             </td>
                         </tr>
                     </table>
@@ -499,21 +499,21 @@
                     
                 }
             }
-            //part1.value='';
-            //part2.value='';
-            //part3.value='';
-            //part4.value='';
-            //part5.value='';
-            //rate1.value='';
-            //rate2.value='';
-            //rate3.value='';
-           // rate4.value='';
-            //rate5.value='';
-           // rep_yr1.value='';
-           // rep_yr2.value='';
-           // rep_yr3.value='';
-           // rep_yr4.value='';
-           // rep_yr5.value='';
+            part1.value='';
+            part2.value='';
+            part3.value='';
+            part4.value='';
+            part5.value='';
+            rate1.value='';
+            rate2.value='';
+            rate3.value='';
+            rate4.value='';
+            rate5.value='';
+            rep_yr1.value='0.5';
+            rep_yr2.value='0.5';
+            rep_yr3.value='0.5';
+            rep_yr4.value='0.5';
+            rep_yr5.value='0.5';
 
             // Show the "Generate 2PDF" buttons
             var pdfButton = document.getElementById("LccButton");// querySelector('input[value="Generate Life Cycle Costing Report"]');
