--- a/Tool_1_LCC.html
+++ b/Tool_1_LCC.html
@@ -292,7 +292,7 @@
                     <h5>Parameters for Capital Cost</h5>
                 </td>
                 <td class='td_text'>
-                    <label><b>Land Area Required:<br></b>( sq.m )</label>
+                    <label><b>Land Area Required:<br></b>( sq.m/MLD )</label>
                 </td>
                 <td style='height: 40px; padding-right: 50px;'>
                     <input type='number' class='inp_box' name='value2' min='0' step="0.1">
