--- a/Tool_2_DST.html
+++ b/Tool_2_DST.html
@@ -277,7 +277,7 @@
 			        <td style="width: 275px; padding-left: 18px;">
                         <label><b>Setting: </b></label><br>
                         <select id="settingSelect" disabled style="width:230px;">
-                            <option value="A1">Urban Area</option>
+                            <option value="A1">Peri-urban Area</option>
                             <option value="A2">Suburban Area</option>
                             <option value="A3">Rural Area</option>
                         </select>
