--- a/Tool_2_DST.html
+++ b/Tool_2_DST.html
@@ -277,9 +277,9 @@
 			        <td style="width: 275px; padding-left: 18px;">
                         <label><b>Setting: </b></label><br>
                         <select id="settingSelect" disabled style="width:230px;">
-                            <option value="A1">Peri-urban Area</option>
-                            <option value="A2">Suburban Area</option>
-                            <option value="A3">Rural Area</option>
+                            <option value="A1">Urban</option>
+                            <option value="A2">Peri-urban</option>
+                            <option value="A3">Rural</option>
                         </select>
                     </td>
                     <td style="width: 325px; padding-left: 18px;">
