--- a/tutorial.html
+++ b/tutorial.html
@@ -12,6 +12,7 @@
 </head>
 <body>
 	<iframe width="420" height="236.25" src="https://www.youtube.com/embed/_-5IYUbXozY" frameborder="0" allowfullscreen></iframe>
+	<iframe width="420" height="236.25" src="https://www.youtube.com/embed/_-5IYUbXozY" frameborder="0" allowfullscreen></iframe>
 
 </body>
 </html>
